Fixes a minor layout issue

--- a/_sass/pages/post.sass
+++ b/_sass/pages/post.sass
@@ -1,5 +1,5 @@
 .post
-    margin-top: 125px
+    margin-top: 25px
 
     > .title
         text-align: center
